--- a/tu-tienda/public/index.html
+++ b/tu-tienda/public/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="<%= BASE_URL %>icono.png">
 
   <!--Tipos de letra desde google fonts-->
   <!--Poppins-->
